# correlation-rs

./: .gitignore  Cargo.toml  README.md  main.py
.github/workflows/: ci.yml
correlation/: Cargo.toml
correlation-py/: Cargo.toml  README.md  pyproject.toml
correlation-py/correlation_py/: correlation.py  result.py  utils.py
correlation-py/examples/: repetition_code.py  surface_code.py
correlation-py/src/: lib.rs
correlation/examples/: surface_code.rs
correlation/src/: lib.rs
examples/: repetition_code.rs  surface_code.rs
src/: analytic.rs  io.rs  lib.rs  main.rs
test_data/: detectors.b8  gen_data.py
test_data/rep_code/: detectors.01  detectors.b8  metadata.yaml
test_data/surface_code/: detectors.b8  hyperedges.json  metadata.yaml
tests/: test_correlation.rs
