[package]
name = "correlation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bitvec = "1.0.1"
#nalgebra = "0.32.2"
serde_yaml = "0.9.21"
itertools = "0.10.5"
smallvec = "1.10.0"
rayon = "1.7.0"
gomez = { version = "0.4.1" }

[profile.release]
lto = true
codegen-units = 1