[package]
name = "correlation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
bitvec = "1.0.1"
nalgebra = "0.32.2"
itertools = "0.10.5"
smallvec = "1.10.0"
rayon = "1.7.0"
argmin = { version = "0.8.1" }
argmin-math = { version = "0.3.0", features = ["ndarray_latest-serde"] }
ndarray = { version = "0.15", features = ["serde-1"] }
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
cfg-if = "1.0.0"
#rustc-hash = "1.1.0"
num_cpus = "1.15.0"
kahan = "0.1.4"
finitediff = { version = "0.1.4", features = ["ndarray"], optional = true }

[dev-dependencies]
serde = "1.0.160"
serde_yaml = "0.9.21"
serde_json = "1.0.96"

[features]
finite-diff = ["finitediff"]

[profile.release]
lto = true
codegen-units = 1
debug = true